# dashboard

./: CHANGELOG.md  pyproject.toml
.github/workflows/: tests.yml
app/api/: app.py  dependencies.py  errors.py  exceptions.py  filters.py  lifespan.py
app/api/articles/: router.py
app/api/auth/: router.py  utils.py
app/api/categories/: router.py
app/api/inventories/: router.py
app/api/taxes/: router.py
app/core/: context.py  domain.py  settings.py
app/core/logging/: config-dev.json
app/domain/: context.py  entities.py  protocols.py
app/domain/articles/: commands.py  entities.py  repository.py  utils.py
app/domain/categories/: commands.py  entities.py  repository.py  utils.py
app/domain/inventories/: commands.py  entities.py  repository.py
app/domain/stores/: commands.py  entities.py  repository.py
app/domain/taxes/: commands.py  entities.py  repository.py  utils.py
app/domain/users/: commands.py  entities.py  repository.py
app/infrastructure/mongo/: base.py  mixin.py  resource.py  utils.py
app/infrastructure/mongo/repositories/: articles.py  categories.py  inventories.py  stores.py  taxes.py  users.py
app/infrastructure/tactill/: data.py  manager.py
app/static/js/: main.js
app/templates/: articles.html  base.html  dashboard.html  error.html  login.html  poc.html  prices.html
scripts/: commons.py  migration.py  utils.py
tests/api/articles/: test_get_articles.py
tests/plugins/: http.py
