[project]
name = "dashboard"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "cleanstack[mongo]",
    "fastapi[standard]==0.137.1",
    "itsdangerous==2.2.0",
    "pwdlib[argon2]==0.3.0",
    "pydantic-settings==2.14.1",
    "pymongo==4.17.0",
    "tactill",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest==9.1.0",
    "ruff==0.15.17",
    "ty==0.0.50",
]

[tool.uv.sources]
cleanstack = { git = "https://github.com/julienpillaud/cleanstack.git", tag = "0.27.0" }
tactill = { git = "https://github.com/julienpillaud/tactill.git", tag = "0.13.0" }

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PL", # Pylint
    "RUF",
    "ANN", # flake8-annotations
]
ignore = [
    "SIM117", # multiple-with-statements
]

[tool.ty.terminal]
output-format = "concise"

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']
disable_error_code = [
    "prop-decorator",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "info"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
